...
  };

  const showDrawAlert = () => {
    Alert.alert('Draw!', 'The game is a draw.', [{ text: 'OK', onPress: () => handleEndGame() }]);
  };
  return (
  <View style={styles.container} testID="gameView">
    <View style={styles.buttonView}>
      <ButtonStart titleButton="End Game" onPress={handleEndGame} testID='endButton'/>
    </View>
    <View style={styles.centeredContent}>
      <View style={styles.gameBoard}>
        {Array.from({ length: 9 }).map((_, index) => (
...
